Priceセクション

--- a/index.html
+++ b/index.html
@@ -24,3 +24,27 @@
     </div>
   </header>
   <!--END[HEADER]-->
+    <!-- [START]price -->
+    <section class="price" id="price">
+      <div class="inner ">
+        <h2 class="section-ttl">Price</h2>
+        <table>
+          <tbody>
+            <tr>
+              <th>row 1</th>
+              <td>Price ¥10,000</td>
+            </tr>
+            <tr>
+              <th>row 2</th>
+              <td>Price ¥10,000</td>
+            </tr>
+            <tr>
+              <th>row 3</th>
+              <td>Price ¥10,000</td>
+            </tr>
+          </tbody>
+        </table>
+        <p>※ 上記料金はサンプルです。</p>
+      </div>
+    </section>
+    <!-- [END]price -->
