F&Aセクション（アコーディオンエリア）

--- a/index.html
+++ b/index.html
@@ -48,3 +48,111 @@
       </div>
     </section>
     <!-- [END]price -->
+    <!--START[Q & A]-->
+    <section class="faq" id="faq">
+      <div class="inner">
+        <h2 class="section-ttl">Q&A</h2>
+        <!-- accordionItems-->
+        <!-- [START]accordion-items -->
+        <div class="accordion-items">
+          <!-- アコーディオン本体 -->
+          <div class="faq__accordion">
+            <div class="faq__accordion_inner">
+              <!-- アコーディオン上部 （常に表示）-->
+              <dt class="faq__accordion_header">
+                <div class="faq_icon">Q</div>
+                <h3 class="faq_q">質問質問質問？</h3>
+                <span class="faq-switch"></span>
+              </dt>
+              <!-- アコーディオン解答部（開く場所） -->
+              <dd class="faq__accordion_body">
+                <p>回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答</p>
+              </dd>
+            </div>
+          </div>
+          <!-- アコーディオン本体 -->
+          <!-- アコーディオン本体 -->
+          <div class="faq__accordion">
+            <div class="faq__accordion_inner">
+              <!-- アコーディオン上部 （常に表示）-->
+              <dt class="faq__accordion_header">
+                <div class="faq_icon">Q</div>
+                <h3 class="faq_q">質問質問質問？ <br> また、質問は質問質問？</h3>
+                <span class="faq-switch"></span>
+              </dt>
+              <!-- アコーディオン解答部（開く場所） -->
+              <dd class="faq__accordion_body">
+                <p>回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答</p>
+              </dd>
+            </div>
+          </div>
+          <!-- アコーディオン本体 -->
+          <!-- アコーディオン本体 -->
+          <div class="faq__accordion">
+            <div class="faq__accordion_inner">
+              <!-- アコーディオン上部 （常に表示）-->
+              <dt class="faq__accordion_header">
+                <div class="faq_icon">Q</div>
+                <h3 class="faq_q">質問質問質問？</h3>
+                <span class="faq-switch"></span>
+              </dt>
+              <!-- アコーディオン解答部（開く場所） -->
+              <dd class="faq__accordion_body">
+                <p>回答回答回答回答回答回答回答回答回答回答回答回答</p>
+              </dd>
+            </div>
+          </div>
+          <!-- アコーディオン本体 -->
+          <!-- アコーディオン本体 -->
+          <div class="faq__accordion">
+            <div class="faq__accordion_inner">
+              <!-- アコーディオン上部 （常に表示）-->
+              <dt class="faq__accordion_header">
+                <div class="faq_icon">Q</div>
+                <h3 class="faq_q">質問質問質問？</h3>
+                <span class="faq-switch"></span>
+              </dt>
+              <!-- アコーディオン解答部（開く場所） -->
+              <dd class="faq__accordion_body">
+                <p>回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答</p>
+              </dd>
+            </div>
+          </div>
+          <!-- アコーディオン本体 -->
+          <!-- アコーディオン本体 -->
+          <div class="faq__accordion">
+            <div class="faq__accordion_inner">
+              <!-- アコーディオン上部 （常に表示）-->
+              <dt class="faq__accordion_header">
+                <div class="faq_icon">Q</div>
+                <h3 class="faq_q">質問質問質問？</h3>
+                <span class="faq-switch"></span>
+              </dt>
+              <!-- アコーディオン解答部（開く場所） -->
+              <dd class="faq__accordion_body">
+                <p>回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答</p>
+              </dd>
+            </div>
+          </div>
+          <!-- アコーディオン本体 -->
+          <!-- アコーディオン本体 -->
+          <div class="faq__accordion">
+            <div class="faq__accordion_inner">
+              <!-- アコーディオン上部 （常に表示）-->
+              <dt class="faq__accordion_header">
+                <div class="faq_icon">Q</div>
+                <h3 class="faq_q">質問質問質問？</h3>
+                <span class="faq-switch"></span>
+              </dt>
+              <!-- アコーディオン解答部（開く場所） -->
+              <dd class="faq__accordion_body">
+                <p>回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答回答</p>
+              </dd>
+            </div>
+          </div>
+          <!-- アコーディオン本体 -->
+        </div>
+        <!-- [END]accordion-items -->
+      </div>
+    </section>
+    <!--END[Q & A]-->
