--- a/index.html
+++ b/index.html
@@ -156,3 +156,24 @@
       </div>
     </section>
     <!--END[Q & A]-->
+  <!--START[FOOTER]-->
+  <footer class="footer" id="footer">
+    <div class="inner">
+      <div class="grid-container">
+        <div class="sns">
+          <a href="#" class="footer-icon"><i class="fab fa-twitter"></i></a>
+          <a href="#" class="footer-icon"><i class="fab fa-facebook-square"></i></a>
+        </div>
+        <ul class="footer-list">
+          <li class="footer__list__item"><a href="#">サイトマップ</a></li>
+          <li class="footer__list__item"><a href="#">個人情報保護方針</a></li>
+          <li class="footer__list__item"><a href="#">プライバシーポリシー</a></li>
+        </ul>
+        <div class="footer-logo">
+          <h1 class="footer__title">Sample Corp.</h1>
+          <p>© デイトラ Landing page Sample.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!--END[FOOTER]-->
