topセクション

--- a/index.html
+++ b/index.html
@@ -24,6 +24,19 @@
     </div>
   </header>
   <!--END[HEADER]-->
+    <!-- [START]top -->
+    <section class="top">
+      <div class="inner__top">
+        <div class="top__content">
+          <div class="top-message-wrapper">
+            <h1 class="top__title">詩が生れて、画が出来る。<br>とかくに人の世は住みにくい。</h1>
+            <p class="top__message_p">どこへ越しても住みにくいと悟った時、詩が生れて、画が出来る。意地を通せば窮屈だ。</p>
+          </div>
+          <button href="#contact" class="button__top">お問い合わせしてみる</button>
+        </div>
+      </div>
+    </section>
+    <!-- [END]top -->
     <!-- [START]price -->
     <section class="price" id="price">
       <div class="inner ">
