serviceのセクション

--- a/index.html
+++ b/index.html
@@ -37,6 +37,51 @@
       </div>
     </section>
     <!-- [END]top -->
+    <!-- [START]service -->
+    <section class="service" id="service">
+      <div class="inner">
+        <h2 class="section-ttl">Service</h2>
+        <div class="service-items">
+          <!-- [START]service-item -->
+          <div class="service__item ">
+            <div class="service__item__top"><img src="./images/service1.svg" alt="ウェブデザイン" class="service__item__img ">
+            </div>
+            <div class="service-item-center ">
+              <h3 class="service__item__title ">WEB<br>DESIGN</h3>
+            </div>
+            <div class="service__item__bottom ">
+              <p>どこへ越しても住みにくいと悟った時、詩が生れて、画が出来る。意地を通せば窮屈だ。</p>
+            </div>
+          </div>
+          <!-- [END]service-item -->
+          <!-- [START]service-item -->
+          <div class="service__item ">
+            <div class="service__item__top"><img src="./images/service2.svg" alt="ウェブコーディング" class="service__item__img ">
+            </div>
+            <div class="service-item-center ">
+              <h3 class="service__item__title ">WEB<br>CODING</h3>
+            </div>
+            <div class="service__item__bottom ">
+              <p>どこへ越しても住みにくいと悟った時、詩が生れて、画が出来る。意地を通せば窮屈だ。</p>
+            </div>
+          </div>
+          <!-- [END]service-item -->
+          <!-- [START]service-item -->
+          <div class="service__item ">
+            <div class="service__item__top"><img src="./images/service3.svg" alt="CMSカスタマイズ" class="service__item__img ">
+            </div>
+            <div class="service-item-center">
+              <h3 class="service__item__title">CMS<br>CUSTOMIZE</h3>
+            </div>
+            <div class="service__item__bottom ">
+              <p>どこへ越しても住みにくいと悟った時、詩が生れて、画が出来る。意地を通せば窮屈だ。</p>
+            </div>
+          </div>
+          <!-- [END]service-item -->
+        </div>
+      </div>
+    </section>
+    <!-- [END]service -->
     <!-- [START]price -->
     <section class="price" id="price">
       <div class="inner ">
