スライダー付きのResultセクション

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+    <!-- SWIPER CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.1/css/swiper.min.css">
   <div id="header-overlay" class="header-overlay"></div>
   <!--START[HEADER]-->
   <header class="header" id="header">
@@ -152,6 +154,88 @@
       </div>
     </section>
     <!-- [END]service -->
+    <!--START[RESULTS]-->
+    <section class="results" id="results">
+      <div class="results-inner">
+        <h2 class="section-ttl">Results</h2>
+        <div class="swiper-container">
+          <ul class="swiper-wrapper">
+            <!-- [START]swiper-slide -->
+            <div class="swiper-slide">
+              <div class="swiper-slide-card">
+                <img src="/images/slide1.png" alt="スライド画像 " class="swiper-slide-img">
+                <div class="slider-txt-wrapper">
+                  <h3 class="swiper-slide-title">とかくに人の世は住みにくい。</h3>
+                  <p class="swiper-slide-info">どこへ越しても住みにくいと悟った時、詩が生れて 、画が出来る。意地を通せば窮屈だ。</p>
+                </div>
+              </div>
+            </div>
+            <!-- [END]swiper-slide -->
+            <!-- [START]swiper-slide -->
+            <div class="swiper-slide">
+              <div class="swiper-slide-card">
+                <img src="/images/slide1.png" alt="スライド画像 " class="swiper-slide-img">
+                <div class="slider-txt-wrapper">
+                  <h3 class="swiper-slide-title">とかくに人の世は住みにくい。</h3>
+                  <p class="swiper-slide-info">どこへ越しても住みにくいと悟った時、詩が生れて 、画が出来る。意地を通せば窮屈だ。</p>
+                </div>
+              </div>
+            </div>
+            <!-- [END]swiper-slide -->
+            <!-- [START]swiper-slide -->
+            <div class="swiper-slide">
+              <div class="swiper-slide-card">
+                <img src="/images/slide1.png" alt="スライド画像 " class="swiper-slide-img">
+                <div class="slider-txt-wrapper">
+                  <h3 class="swiper-slide-title">とかくに人の世は住みにくい。</h3>
+                  <p class="swiper-slide-info">どこへ越しても住みにくいと悟った時、詩が生れて 、画が出来る。意地を通せば窮屈だ。</p>
+                </div>
+              </div>
+            </div>
+            <!-- [END]swiper-slide -->
+            <!-- [START]swiper-slide -->
+            <div class="swiper-slide">
+              <div class="swiper-slide-card">
+                <img src="/images/slide1.png" alt="スライド画像 " class="swiper-slide-img">
+                <div class="slider-txt-wrapper">
+                  <h3 class="swiper-slide-title">とかくに人の世は住みにくい。</h3>
+                  <p class="swiper-slide-info">どこへ越しても住みにくいと悟った時、詩が生れて 、画が出来る。意地を通せば窮屈だ。</p>
+                </div>
+              </div>
+            </div>
+            <!-- [END]swiper-slide -->
+            <!-- [START]swiper-slide -->
+            <div class="swiper-slide">
+              <div class="swiper-slide-card">
+                <img src="/images/slide1.png" alt="スライド画像 " class="swiper-slide-img">
+                <div class="slider-txt-wrapper">
+                  <h3 class="swiper-slide-title">とかくに人の世は住みにくい。</h3>
+                  <p class="swiper-slide-info">どこへ越しても住みにくいと悟った時、詩が生れて 、画が出来る。意地を通せば窮屈だ。</p>
+                </div>
+              </div>
+            </div>
+            <!-- [END]swiper-slide -->
+            <!-- [START]swiper-slide -->
+            <div class="swiper-slide">
+              <div class="swiper-slide-card">
+                <img src="/images/slide1.png" alt="スライド画像 " class="swiper-slide-img">
+                <div class="slider-txt-wrapper">
+                  <h3 class="swiper-slide-title">とかくに人の世は住みにくい。</h3>
+                  <p class="swiper-slide-info">どこへ越しても住みにくいと悟った時、詩が生れて 、画が出来る。意地を通せば窮屈だ。</p>
+                </div>
+              </div>
+            </div>
+            <!-- [END]swiper-slide -->
+          </ul>
+        </div>
+        <!--END [SWIPER] -->
+        <div class="swiper-pagination swiper-pagination-white"></div>
+        <div class="border-btn-wrapper">
+          <button class="border-btn">VIEW ALL</button>
+        </div>
+      </div>
+    </section>
+    <!--END[RESULTS]-->
     <!-- [START]price -->
     <section class="price" id="price">
       <div class="inner ">
@@ -305,3 +389,4 @@
     </div>
   </footer>
   <!--END[FOOTER]-->
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
