スクロールで下から出現するトップへ戻るボタン

--- a/index.html
+++ b/index.html
@@ -389,4 +389,9 @@
     </div>
   </footer>
   <!--END[FOOTER]-->
+  <!-- [START]to top -->
+  <a href="#top" class="to-top-btn totop">
+    <img src="/images/totop.svg" alt="トップへ戻る">
+  </a>
+  <!-- [END]to top -->
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
