スタッフのコメントのセクション

--- a/index.html
+++ b/index.html
@@ -260,6 +260,38 @@
       </div>
     </section>
     <!-- [END]price -->
+    <!-- [START]comments -->
+    <section class="comments" id="comments">
+      <div class="inner">
+        <div class="comments-items">
+          <!-- [COMMENTS]コンテンツ部分 -->
+          <div class="comments-contents">
+            <h2 class="section-ttl">Comments</h2>
+            <!-- [COMMENTS]フタッフの部分 -->
+            <div class="comments-staff-box">
+              <img src="/images/comments1.png" alt="社員の声" class="comments-staff-img">
+              <div class="comment-txt-wrapper">
+                <p class="comments-staff-comment">
+                  どこへ越しても住みにくいと悟った時、詩が生れて、画が出来る。意地を通せば窮屈だ。どこへ越しても住みにくいと悟った時、詩が生れて、画が出来る。意地を通せば窮屈だ。</p>
+              </div>
+            </div>
+            <!-- [COMMENTS]フタッフの部分 -->
+            <div class="comments-staff-box">
+              <img src="/images/comments2.png" alt="社員の声" class="comments-staff-img">
+              <div class="comment-txt-wrapper">
+                <p class="comments-staff-comment">
+                  どこへ越しても住みにくいと悟った時、詩が生れて、画が出来る。意地を通せば窮屈だ。どこへ越しても住みにくいと悟った時、詩が生れて、画が出来る。意地を通せば窮屈だ。
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="comments-staffs-img-box">
+            <img class="comments-img-staffs" src="/images/comments3.png" alt="社員の集合写真">
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--END[comments]-->
     <!--START[Q & A]-->
     <section class="faq" id="faq">
       <div class="inner">
