Google マップのセクション

--- a/index.html
+++ b/index.html
@@ -400,6 +400,29 @@
       </div>
     </section>
     <!--END[Q & A]-->
+    <!--START[ACCESS]-->
+    <section class="access" id="access">
+      <div class="inner">
+        <div class="access-inner-box">
+          <!-- セクションタイトルと住所 -->
+          <div class="access-info">
+            <h2 class="section-ttl">Access</h2>
+            <p class="access-date">〒106-6126 <br> 東京都港区六本木6丁目 10-1
+              <br>六本木ヒルズ森タワー</p>
+          </div>
+          <!-- googleマップを包む -->
+          <div class="access-googleMap-wrapper">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.380662688885!2d139.70298409999998!3d35.6922491!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188cdb852dd471%3A0x94e97a5a88366dac!2z44Ot44O844K944OzIOaWsOWuv-S4ieS4geebruWMl-W6lw!5e0!3m2!1sja!2sjp!4v1591243874566!5m2!1sja!2sjp" width="100%" height="auto" frameborder="0" style="border:0;" allow="fullscreen" aria-hidden="false" tabindex="0"></iframe>
+          </div>
+          <!-- Google マップボタン -->
+          <div class="border-btn-wrapper">
+            <button class="border-btn">Google Maps</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    </div>
+    <!--END[ACCESS]-->
   <!--START[FOOTER]-->
   <footer class="footer" id="footer">
     <div class="inner">
