コンタクトの記述

--- a/index.html
+++ b/index.html
@@ -423,6 +423,79 @@
     </section>
     </div>
     <!--END[ACCESS]-->
+    <!-- [START]contact -->
+    <section id="contact" class="contact">
+      <div class="contact-inner">
+        <div class="contact-header">
+          <div class="contact-headerInner">
+            <h2 class="section-ttl">Contact Us</h2>
+            <p class="contact-header-txt">どこへ越しても住みにくいと悟った時、詩が生れて、画が出来る。</p>
+          </div>
+        </div>
+        <div class="contact-content">
+          <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSevzTXNAu_RKegMLnt9dY8g1CpdKARXo90NJwVEHcW7D6g4hw/formResponse" target="_self" method="POST" id="mG61Hd" jsmodel="TOfxwf Q91hve" data-response="%.@.[]]" data-first-entry="0" data-last-entry="6" data-is-first-page="true">
+            <dl class="contact-list">
+              <div class="contact-item">
+                <label class="contact-item-ttl">お問い合わせ種別</label>
+                <dd class="contact-selectBox">
+                  <select name="form-select" name=”entry.1125129013“ id="form-select">
+                    <option value="-" selected>選択して下さい</option>
+                    <option value="A">A</option>
+                    <option value="B">B</option>
+                  </select>
+                </dd>
+              </div>
+              <div class="contact-item">
+                <label class="contact-item-ttl">氏名<span class="contact-requireLabel">必須</span></label>
+                <dd class="contact-inputBox">
+                  <input class="js-require" type="text" name=”entry.1125129013“ placeholder="氏名">
+                  <span class="contact-focusLine"></span>
+                </dd>
+              </div>
+              <div class="contact-item">
+                <label class="contact-item-ttl">フリガナ<span class="contact-requireLabel">必須</span></label>
+                <dd class="contact-inputBox">
+                  <input class="js-require" type="text" name=”entry.965001124“ id="js-formKana" placeholder="フリガナ">
+                  <span class="contact-focusLine"></span>
+                </dd>
+              </div>
+              <div class="contact-item contact-item-mail">
+                <label class="contact-item-ttl">メールアドレス</label>
+                <dd class="contact-inputBox">
+                  <input type="email" name=”910272527“ id="form-email" placeholder="sample@gmail.com">
+                  <span class="contact-focusLine"></span>
+                </dd>
+              </div>
+              <div class="contact-item contact-item-sex">
+                <label class="contact-item-ttl">性別</label>
+                <dd class="contact-inputBox">
+                  <div class="contact-radio">
+                    <input type="radio" value="male" name="sex" id="radio-male">
+                    <label for="radio-male" class="contact-radioLabel">男性</label>
+                  </div>
+                  <div class="contact-radio">
+                    <input type="radio" value="female" name="sex" id="radio-female">
+                    <label for="radio-female" class="contact-radioLabel">女性</label>
+                  </div>
+                </dd>
+              </div>
+              <div class="mod-message contact-item">
+                <label class="contact-item-ttl">メッセージ</label>
+                <textarea name="message"></textarea>
+              </div>
+              <div class="contact-privacy contact-item">
+                <input type="checkbox" name="privacy" id="form-privacy">
+                <label for="form-privacy" class="contact-privacyLabel">
+                  個人情報保護方針に同意する
+                </label>
+              </div>
+              <div class="contact-item btn-wrapper"><button id="form-submit" class="contact-button">送信する</button></div>
+            </dl>
+          </form>
+        </div>
+      </div>
+    </section>
+    <!-- [END]contact -->
   <!--START[FOOTER]-->
   <footer class="footer" id="footer">
     <div class="inner">
